# mcdata-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: create-release.yml
src/: cached_data.rs  constants.rs  data_source.rs  error.rs  features.rs  indexer.rs  lib.rs  loader.rs  paths.rs  structs.rs  version.rs
tests/: integration_test.rs
