[package]
name = "mcdata-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs-next = "2.0.0"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
zip = "2.6.1"
